# megalabs

./: CMakeLists.txt  README.md
include/: HandlerBase.h  SenderBase.h  SenderInstance.h  SenderNetwork.h
megalabs/: megalabs.pro
src/: CMakeLists.txt  HandlerBase.cpp  SenderBase.cpp  SenderInstance.cpp  SenderNetwork.cpp  monitor.cpp
test/: CMakeLists.txt  SenderInstanceTest.cpp
